Cancellable mappings
Requesting a port (un)mapping is an asynchronous process, but there doesn't appear to be any way to cancel it. Internally, I see many uses of GCancellable
for intermediate requests, but they aren't exposed in the API.
Requesting a port (un)mapping is an asynchronous process, but there doesn't appear to be any way to cancel it. Internally, I see many uses of GCancellable
for intermediate requests, but they aren't exposed in the API.