Use gUPnP-igd to implement add/remove port mappings

Unfortunately, there appears to be no way to [cancel a mapping request](https://gitlab.gnome.org/GNOME/gupnp-igd/-/issues/7), so I've removed that function, and removed the return values used for cancelling. If cancelling comes back, it'll probably be in the form of a `GCancellable` anyway.

Testing Done:
Compile only.

We removed implicit automatic port mapping when we replaced `purple_proxy_connect` with direct `gio` code. Protocols should probably be explicit about when they request a port mapping, but they haven't been made to do that yet.

Reviewed at https://reviews.imfreedom.org/r/1789/